# htmx

htmx-wasm/: .gitignore  Cargo.minimal.toml  Cargo.toml  Cargo.ultra-minimal.toml  FINAL_DEVELOPMENT_PLAN.md  PRODUCTION_TESTING_GUIDE.md  QUICK_START.md  README.md  browser-test-runner.html  build.sh  comprehensive_test_results.json  create-production-release-fixed.sh  create-production-release.sh  create_final_report.py  debug_websocket.py  final_project_report.json  find_ports.py  fix_websocket_handler.py  htmx-wasm-wrapper.js  htmx_wasm.js  investigate_websockets_api.py  optimize-bundle-size.sh  package.json  performance_results.json  production-server.py  real_server_integration_results.json  run-comprehensive-tests.py  test-basic.html  test-production-release.sh  test-runner.html  test-server.py  test-sse-server-8768.py  test-sse-server-dynamic.py  test-sse-server.py  test-websocket-server-8767.py  test-websocket-server-dynamic.py  test-websocket-server.py
htmx-wasm/examples/: js-extensions.html  minimal-bundle-example.html  modular-extensions.html  performance-comparison.html  production-server.py  single-bundle-example.html  single-bundle.html
htmx-wasm/extensions/sse-module/: Cargo.toml
htmx-wasm/extensions/sse-module/src/: lib.rs
htmx-wasm/extensions/websocket-module/: Cargo.toml
htmx-wasm/extensions/websocket-module/src/: lib.rs
htmx-wasm/js-extensions/: loading-states.js
htmx-wasm/releases/production/: RELEASE_NOTES.md  htmx_wasm_minimal.d.ts  htmx_wasm_minimal.js  minimal-bundle-fixed.html  production-server.py  single-bundle-fixed.html
htmx-wasm/releases/production-fixed/: htmx_wasm.d.ts  htmx_wasm.js  htmx_wasm_minimal.d.ts  htmx_wasm_minimal.js  minimal-bundle-fixed.html  package.json  single-bundle-fixed.html
htmx-wasm/releases/production/js-extensions/: client-side-templates.js
htmx-wasm/src/: core.rs  js_bridge.rs  lib.rs  minimal.rs  ultra_minimal.rs  ultra_minimal_core.rs
htmx-wasm/src/extensions/: mod.rs  sse.rs  websocket.rs
htmx-wasm/tests/: benchmark_tests.rs  comparison_tests.html  comprehensive_unit_tests.rs  cross_browser_tests.rs  extension_tests.rs  integration_tests.rs  performance_benchmarks.py  real_server_integration.py  real_server_tests.rs  server_integration_tests.py  unit_tests.rs
