[package]
name = "htmx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "console", "Document", "Element", "Event", "EventTarget", "HtmlElement",
  "HtmlFormElement", "HtmlInputElement", "WebSocket", "EventSource", 
  "MessageEvent", "CloseEvent", "ErrorEvent", "CustomEvent", "CustomEventInit", 
  "XmlHttpRequest", "FormData", "Node", "Window", "NodeList", "DocumentFragment"
]}
js-sys = "0.3"
urlencoding = "2.1"

[features]
default = ["websocket", "sse"]
websocket = []
sse = []
all-extensions = ["websocket", "sse"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"

[dev-dependencies]
wasm-bindgen-test = "0.3"
