[package]
name = "htmx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false, features = [
  "console", "Document", "Element", "Event", "EventTarget", "HtmlElement"
]}
js-sys = { version = "0.3", default-features = false }
wee_alloc = { version = "0.4", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = "z"

[features]
default = []
wee_alloc = ["dep:wee_alloc"]
ultra-minimal = []
