[package]
name = "htmx-websocket-extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "console", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", 
  "Element", "Event", "CustomEvent", "CustomEventInit"
]}
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
